--- a/index.html
+++ b/index.html
@@ -50,14 +50,182 @@
         <!-- </main> dicount-->
         <section class="discount">
             <div class="container">
-                <div class="card">
-                    <div class="card-img">
-                        <img src="" alt="">
+                <div class="discount-content">
+                    <div class="card">
+                        <div class="card-img">
+                            <img class="hero-img.2" src="assets/imgs/hero-bg.2.jpg" alt="discount img">
+                        </div>
+                        <div class="card-text">
+                            <h6>Lorem ipsum, dolor.</h6>
+                            <h5><span>20%</span>off</h5>
+                            <a href="" class="btn">order nown</a>
+                        </div>
                     </div>
-                    <div class="card-text">
-                        <h6>Lorem ipsum, dolor.</h6>
-                        <h5>20% <sub>off</sub></h5>
-                        <a href="" class="btn">order now</a>
+                    <div class="card">
+                        <div class="card-img">
+                            <img class="hero-img.2" src="assets/imgs/hero-bg.3.jpg" alt="discount img">
+                        </div>
+                        <div class="card-text">
+                            <h6>Lorem ipsum, dolor.</h6>
+                            <h5><span>15%</span>off</h5>
+                            <a href="" class="btn">order nown</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- main > menu -->
+        <section class="menu">
+            <div class="container">
+                <h3>OUR MENU</h3>
+                <div class="menu-nav">
+                    <a href="" class="abc">All</a>
+                    <a href="">Burger</a>
+                    <a href="">Pizza</a>
+                    <a href="">Fries</a>
+                </div>
+                <div class="menu-list">
+                    <div class="card">
+                        <div class="top">
+                            <img width="200px" src="assets/imgs/f1.png" alt="menu item">
+                        </div>
+                        <div class="bottom">
+                            <h6> Delicions pizza</h6>
+                            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime fugiat ratione
+                                voluptatem omnis commodi ipsa quod corporis corrupti pariatur, dicta sunt illo cum
+                                unde minus nemo asperiores deserunt, molestiae dolores.</p>
+                            <div class="cta">
+                                <span>$15</span>
+                                <button type="button" class="btn"><i class="ri-shopping-cart-line"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="top">
+                            <img width="200px" src="assets/imgs/f1.png" alt="menu item">
+                        </div>
+                        <div class="bottom">
+                            <h6> Delicions pizza</h6>
+                            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime fugiat ratione
+                                voluptatem omnis commodi ipsa quod corporis corrupti pariatur, dicta sunt illo cum
+                                unde minus nemo asperiores deserunt, molestiae dolores.</p>
+                            <div class="cta">
+                                <span>$17</span>
+                                <button type="button" class="btn"><i class="ri-shopping-cart-line"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="top">
+                            <img width="200px" src="assets/imgs/f1.png" alt=" menu item">
+                        </div>
+                        <div class="bottom">
+                            <h6> Delicions pizza</h6>
+                            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime fugiat ratione
+                                voluptatem omnis commodi ipsa quod corporis corrupti pariatur, dicta sunt illo cum
+                                unde minus nemo asperiores deserunt, molestiae dolores.</p>
+                            <div class="cta">
+                                <span>$20</span>
+                                <button type="button" class="btn"><i class="ri-shopping-cart-line"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="top">
+                            <img width="200px" src="assets/imgs/f1.png" alt="menu item">
+                        </div>
+                        <div class="bottom">
+                            <h6> Delicions pizza</h6>
+                            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime fugiat ratione
+                                voluptatem omnis commodi ipsa quod corporis corrupti pariatur, dicta sunt illo cum
+                                unde minus nemo asperiores deserunt, molestiae dolores.</p>
+                            <div class="cta">
+                                <span>$14</span>
+                                <button type="button" class="btn"><i class="ri-shopping-cart-line"></i></button>
+                            </div>
+                        </div>
+                    </div><div class="card">
+                        <div class="top">
+                            <img width="200px" src="assets/imgs/f1.png" alt="menu item">
+                        </div>
+                        <div class="bottom">
+                            <h6> Delicions pizza</h6>
+                            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime fugiat ratione
+                                voluptatem omnis commodi ipsa quod corporis corrupti pariatur, dicta sunt illo cum
+                                unde minus nemo asperiores deserunt, molestiae dolores.</p>
+                            <div class="cta">
+                                <span>$16</span>
+                                <button type="button" class="btn"><i class="ri-shopping-cart-line"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="top">
+                            <img width="200px" src="assets/imgs/f1.png" alt="menu item">
+                        </div>
+                        <div class="bottom">
+                            <h6> Delicions pizza</h6>
+                            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime fugiat ratione
+                                voluptatem omnis commodi ipsa quod corporis corrupti pariatur, dicta sunt illo cum
+                                unde minus nemo asperiores deserunt, molestiae dolores.</p>
+                            <div class="cta">
+                                <span>$19</span>
+                                <button type="button" class="btn"><i class="ri-shopping-cart-line"></i></button>
+                            </div>
+                        </div>
+                    </div><div class="card">
+                        <div class="top">
+                            <img width="200px" src="assets/imgs/f1.png" alt="menu item">
+                        </div>
+                        <div class="bottom">
+                            <h6> Delicions pizza</h6>
+                            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime fugiat ratione
+                                voluptatem omnis commodi ipsa quod corporis corrupti pariatur, dicta sunt illo cum
+                                unde minus nemo asperiores deserunt, molestiae dolores.</p>
+                            <div class="cta">
+                                <span>$11</span>
+                                <button type="button" class="btn"><i class="ri-shopping-cart-line"></i></button>
+                            </div>
+                        </div>
+                    </div><div class="card">
+                        <div class="top">
+                            <img width="200px" src="assets/imgs/f1.png" alt="menu item">
+                        </div>
+                        <div class="bottom">
+                            <h6> Delicions pizza</h6>
+                            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime fugiat ratione
+                                voluptatem omnis commodi ipsa quod corporis corrupti pariatur, dicta sunt illo cum
+                                unde minus nemo asperiores deserunt, molestiae dolores.</p>
+                            <div class="cta">
+                                <span>$10</span>
+                                <button type="button" class="btn"><i class="ri-shopping-cart-line"></i></button>
+                            </div>
+                        </div>
+                    </div><div class="card">
+                        <div class="top">
+                            <img width="200px" src="assets/imgs/f1.png" alt="menu item">
+                        </div>
+                        <div class="bottom">
+                            <h6> Delicions pizza</h6>
+                            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime fugiat ratione
+                                voluptatem omnis commodi ipsa quod corporis corrupti pariatur, dicta sunt illo cum
+                                unde minus nemo asperiores deserunt, molestiae dolores.</p>
+                            <div class="cta">
+                                <span>$13</span>
+                                <button type="button" class="btn"><i class="ri-shopping-cart-line"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div style="text-align: center;"> <a href="#" class="btn"> View More</a></div>
+            </div>
+        </section>
+        <!-- main >about -->
+        <section class="about">
+            <div class="container">
+                <div class="about-content">
+                    <div class="about-img">
+                        <img width="90%" src="assets/imgs/about-img.png" alt="">
                     </div>
                 </div>
             </div>
