--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
                                 <button type="button" class="btn"><i class="ri-shopping-cart-line"></i></button>
                             </div>
                         </div>
-                    </div><div class="card">
+                    </div>
+                    <div class="card">
                         <div class="top">
                             <img width="200px" src="assets/imgs/f1.png" alt="menu item">
                         </div>
@@ -173,7 +174,8 @@
                                 <button type="button" class="btn"><i class="ri-shopping-cart-line"></i></button>
                             </div>
                         </div>
-                    </div><div class="card">
+                    </div>
+                    <div class="card">
                         <div class="top">
                             <img width="200px" src="assets/imgs/f1.png" alt="menu item">
                         </div>
@@ -187,7 +189,8 @@
                                 <button type="button" class="btn"><i class="ri-shopping-cart-line"></i></button>
                             </div>
                         </div>
-                    </div><div class="card">
+                    </div>
+                    <div class="card">
                         <div class="top">
                             <img width="200px" src="assets/imgs/f1.png" alt="menu item">
                         </div>
@@ -201,7 +204,8 @@
                                 <button type="button" class="btn"><i class="ri-shopping-cart-line"></i></button>
                             </div>
                         </div>
-                    </div><div class="card">
+                    </div>
+                    <div class="card">
                         <div class="top">
                             <img width="200px" src="assets/imgs/f1.png" alt="menu item">
                         </div>
@@ -230,7 +234,86 @@
                 </div>
             </div>
         </section>
+
+        <!-- menu > booking -->
+        <section class="booking">
+            <div class="container">
+                <form action="">
+                    <h3>book a table</h3>
+                    <label for=""> your name</label>
+                    <input type="text" name="" id="">
+                    <label for=""> mobile numbber</label>
+                    <input type="text" name="" id="">
+                    <label for=""> your email</label>
+                    <input type="text" name="" id="">
+                    <label for=""> how many persone?</label>
+                    <input type="text" name="" id="">
+                    <label for="">Date</label>
+                    <input type="text">
+                    <button type="submit" class="btn">book now</button>
+                </form>
+                <iframe width="100%" height="320px"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3940.09958040931!2d7.482377473905372!3d9.05468098858875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e0ba6ed7ab9b7%3A0xac44b09c81877e29!2sNNPC%20Limited%20Towers%2C%20Abuja!5e0!3m2!1sen!2sng!4v1770971089751!5m2!1sen!2sng"
+                    width="" height="" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
     </main>
+    <!-- main > testimonies -->
+    <section class="testimonies">
+        <div class="container">
+            <div class="title"> says our customers</div>
+            <div class="content">
+                <div class="card">
+                    <div class="card-top">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi ipsa dolore sequi
+                            perspiciatis minus iure tempora magnam, recusandae molestias quis, maiores iusto itaque
+                            veritatis rerum porro enim tenetur et quo!</p>
+                        <h6>mike misel</h6>
+
+                    </div>
+                    <div class="card-img">
+                        <img width="100%" src="assets/imgs/hero.jpg" alt="">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-top">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi ipsa dolore sequi
+                            perspiciatis minus iure tempora magnam, recusandae molestias quis, maiores iusto itaque
+                            veritatis rerum porro enim tenetur et quo!</p>
+                        <h6>mike misel</h6>
+
+                    </div>
+                    <div class="card-img">
+                        <img width="100%" src="assets/imgs/client1.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="col">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <div class="sos">
+                        <a href="">F</a>
+                        <a href="">I</a>
+                        <a href="">X</a>
+                    </div>
+                </div>
+                <div class="col">
+                    Opening Hours
+                    <p>Every Day</p>
+                    <span>10.00 Am -10.00Pm</span>
+                </div>
+            </div>
+            <div class="footer-note">
+                &copy;cyberwebpersonel-2026-2-13:
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
