--- a/index.html
+++ b/index.html
@@ -231,6 +231,18 @@
                     <div class="about-img">
                         <img width="90%" src="assets/imgs/about-img.png" alt="">
                     </div>
+                    <div class="text">
+                        <div>
+
+                            <h3> Lorem, ipsum dolor. </h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id optio amet accusamus
+                                voluptatibus rerum nihil, iusto dolorem ratione ipsam quidem maiores mollitia pariatur
+                                dolorum necessitatibus earum nisi laudantium repellat sequi.</p>
+
+                            <a href="" class="btn"> Read More </a>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </section>
@@ -240,16 +252,16 @@
             <div class="container">
                 <form action="">
                     <h3>book a table</h3>
-                    <label for=""> your name</label>
-                    <input type="text" name="" id="">
-                    <label for=""> mobile numbber</label>
-                    <input type="text" name="" id="">
-                    <label for=""> your email</label>
-                    <input type="text" name="" id="">
-                    <label for=""> how many persone?</label>
-                    <input type="text" name="" id="">
+                    <label for=""> Your name:</label>
+                    <input type="text" name="" id="" placeholder="NAME:">
+                    <label for=""> Mobile Numbber:</label>
+                    <input type="text" name="" id="" placeholder="+234:">
+                    <label for=""> Your Email:</label>
+                    <input type="text" name="" id="" placeholder="YOUR@EMAIL.COM:">
+                    <label for=""> How Many Persone:</label>
+                    <input type="text" name="" id="" placeholder="How Many Persone?">
                     <label for="">Date</label>
-                    <input type="text">
+                    <input type="text" placeholder="DATE:">
                     <button type="submit" class="btn">book now</button>
                 </form>
                 <iframe width="100%" height="320px"
@@ -258,59 +270,65 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
-    </main>
-    <!-- main > testimonies -->
-    <section class="testimonies">
-        <div class="container">
-            <div class="title"> says our customers</div>
-            <div class="content">
-                <div class="card">
-                    <div class="card-top">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi ipsa dolore sequi
-                            perspiciatis minus iure tempora magnam, recusandae molestias quis, maiores iusto itaque
-                            veritatis rerum porro enim tenetur et quo!</p>
-                        <h6>mike misel</h6>
 
-                    </div>
-                    <div class="card-img">
-                        <img width="100%" src="assets/imgs/hero.jpg" alt="">
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-top">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi ipsa dolore sequi
-                            perspiciatis minus iure tempora magnam, recusandae molestias quis, maiores iusto itaque
-                            veritatis rerum porro enim tenetur et quo!</p>
-                        <h6>mike misel</h6>
+        <!-- main > testimonies -->
+        <section class="testimonies">
+            <div class="container">
+                <div class="title"> says our customers</div>
+                <div class="content">
+                    <div class="card">
+                        <div class="card-top">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi ipsa dolore sequi
+                                perspiciatis minus iure tempora magnam, recusandae molestias quis, maiores iusto itaque
+                                veritatis rerum porro enim tenetur et quo!</p>
+                            <h6>mike misel</h6>
 
+                        </div>
+                        <div class="card-img">
+                            <img width="100%" src="assets/imgs/hero.jpg" alt="">
+                        </div>
                     </div>
-                    <div class="card-img">
-                        <img width="100%" src="assets/imgs/client1.jpg" alt="">
+                    <div class="card">
+                        <div class="card-top">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi ipsa dolore sequi
+                                perspiciatis minus iure tempora magnam, recusandae molestias quis, maiores iusto itaque
+                                veritatis rerum porro enim tenetur et quo!</p>
+                            <h6>mary jane</h6>
+
+                        </div>
+                        <div class="card-img">
+                            <img width="100%" src="assets/imgs/client1.jpg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
     <!-- footer -->
     <footer>
         <div class="container">
             <div class="footer-content">
                 <div class="col">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                    <div class="sos">
-                        <a href="">F</a>
-                        <a href="">I</a>
-                        <a href="">X</a>
-                    </div>
+                    <p> Contact Us</p>
+                    <a href="#"><i class="ri-map-pin-2-fill"></i>Address</a>
+                    <a href="tell:+234"><i class="ri-phone-fill"></i>+234 9161772967</a>
+                    <a href="mailto:cyberwebresearcher@gmail.com"><i
+                            class="ri-mail-fill"></i>cyberwebresearcher@gmail.com</a>
+                </div>
+                <div class="sos">
+                    <a href=""><i class="ri-facebook-circle-fill"></i></a>
+                    <a href=""><i class="ri-instagram-line"></i></a>
+                    <a href=""><i class="ri-twitter-line"></i></a>
+                    <a href=""><i class="ri-pinterst-line"></i></a>
                 </div>
                 <div class="col">
                     Opening Hours
                     <p>Every Day</p>
-                    <span>10.00 Am -10.00Pm</span>
+                    <span>10.00 Am - 10.00Pm</span>
                 </div>
             </div>
             <div class="footer-note">
-                &copy;cyberwebpersonel-2026-2-13:
+                &copy;2026 website restaurants.All rights reserved.
             </div>
         </div>
     </footer>
